<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WerewolfMafia</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_achievements">Achievements</string>
    <string name="title_activity_high_score_list">HighScoreList</string>
    <string name="title_activity_vote_to_kill">VoteToKill</string>
    <string name="title_activity_sense_kill">SenseKill</string>
    
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmation">Confirmation</string>
    <string name="already">Already Registered</string>
    
    
    <string name="team">Team</string>
    <string name="wolf">Wolf</string>
    <string name="townie">Townie</string>
    <string name="nonalligned">None Alligned</string>
    
    <string name="highscorelist">High Score List</string>
    <string name="vote">Vote(#):</string>
    <string name="sense">Sense</string>
    <string name="kill">Kill</string>
    
    <string name="g1">Game</string>
    <string name="g2">Has not</string>
    <string name="g3">Started</string>

</resources>